tests/parser/syntax-errors/comparisons-are-not-associative/comparison_ops_nonassoc_in_func.choc
# RUN: choco-opt "%s" | filecheck "%s"

def foo():
    1 < 2 == 2

# CHECK:      SyntaxError (line 4, column 11): Comparison operators are not associative.
# CHECK-NEXT: >>>    1 < 2 == 2
# CHECK-NEXT: >>>----------^
